--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
     * one time upload of language files. These language files will not be added on Github.
 
 2018-11-25 Franz Holzinger <franz@ttproducts.de>
+    * new: Replace the labels from the newReply and newThread processScript setup by language labels: 
+      newReply.didWhat, newReply.subjectPrefix, newReply.followThisLink, newThread.didWhat, newThread.subjectPrefix
     * Add a new label for each text entry in the file template/board_notify.txt
     * fix in composer.json: require shall use the namespace typo3-ter instead of jambagecom
 
