--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 
-2018-12-01 Franz Holzinger <franz@ttproducts.de>
+2018-11-29 Franz Holzinger <franz@ttproducts.de>
     * one time upload of language files. These language files will not be added on Github.
+    * readd the API to use a commenting system inside of external extensions. Only the method getDefaultConfig is needed.
 
 2018-11-25 Franz Holzinger <franz@ttproducts.de>
     * new: Replace the labels from the newReply and newThread processScript setup by language labels: 
