--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-12-03 Franz Holzinger <franz@ttproducts.de>
+    * add a different error message when no email address has been entered
+
 2018-12-02 Franz Holzinger <franz@ttproducts.de>
     * move template/board_help.tmpl -> Resources/Private/Templates/board_help.tmpl
     * template/board_notify.txt     -> Resources/Private/Templates/board_notify.txt
