--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2018-12-03 Franz Holzinger <franz@ttproducts.de>
+    * add new constants: notificationEmail and notify
     * add a different error message when no email address has been entered
 
 2018-12-02 Franz Holzinger <franz@ttproducts.de>
