--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+
+2019-01-01 Franz Holzinger <franz@ttproducts.de>
+    * bugfix: Do not integrate the default CSS style twice.
+               _CSS_DEFAULT_STYLE < TEMP.TT_BOARD.CSS._CSS_DEFAULT_STYLE
+
 2018-12-16 Franz Holzinger <franz@ttproducts.de>
     * bugfix: Do not write "post new replay" at the bottom for a new post. Use the text "new post" instead.
 
