* new feature: Set fillSubject in order to fill in the subject field of the entry form with the subject of the first post. The text post.fillSubjectPrefix will be used as a prefix. * new feature: Add a post thanks message at the beginning of the entry form. * data protection: Pass the email addresses inside of a TYPO3 session.

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -9,6 +9,10 @@
 				<source><![CDATA[Name:]]></source>
 				<target><![CDATA[Name:]]></target>
 			</trans-unit>
+			<trans-unit id="post.thanks" xml:space="preserve">
+				<source><![CDATA[Many thanks for your contribution. Click again on the heading forum to read your contribution.]]></source>
+				<target><![CDATA[Vielen Dank für Ihren Beitrag. Klicken Sie erneut auf die Rubrik Forum, um Ihren Beitrag zu lesen.]]></target>
+			</trans-unit>
 			<trans-unit id="board_age" approved="yes">
 				<source><![CDATA[Age]]></source>
 				<target><![CDATA[Alter]]></target>
