--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+2019-02-07 Franz Holzinger <franz@ttproducts.de>
+    * restructure: Move the USER to USER_INT conversion when no cache is used from ActionController to RegisterPuginController
+
 2019-01-31 Franz Holzinger <franz@ttproducts.de>
     * modify composer.json: use jambagecom instead of typo3-ter
 
