* new feature part 2: transform database queries into the querybuilder format based on Doctrine

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020-03-30 Franz Holzinger <franz@ttproducts.de>
+    * new feature part 2: transform database queries into the querybuilder format based on Doctrine
+
 2020-02-14 Franz Holzinger <franz@ttproducts.de>
     * bugfix for TYPO3 8.7: variable $GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf']['tt_board'] must be used instead of $_EXTCONF
 
