--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -25,6 +25,10 @@
 				<source><![CDATA[Author]]></source>
 				<target><![CDATA[Autor]]></target>
 			</trans-unit>
+			<trans-unit id="board_city" approved="yes">
+				<source><![CDATA[City]]></source>
+				<target><![CDATA[Stadt]]></target>
+			</trans-unit>
 			<trans-unit id="board_back_to_forum" approved="yes">
 				<source><![CDATA[Back to Forum]]></source>
 				<target><![CDATA[Zurück zum Forum]]></target>
