--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-07-31 Franz Holzinger <franz@ttproducts.de>
+    * add the field tstamp to the TCA
+    * add the page browser header to the ###TEMPLATE_FORUM### subpart of the template file board_template2.html 
+
 2020-07-27 Franz Holzinger <franz@ttproducts.de>
     * add new field city
 
