--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2022-04-07 Franz Holzinger <franz@ttproducts.de>
+    * compatibility TYPO3 11.5 and PHP 8
 
 2021-11-17 Franz Holzinger <franz@ttproducts.de>
     * compatibility TYPO3 10.4: use \TYPO3\CMS\Frontend\Resource\FilePathSanitizer
